--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ dependencies = [
     "alembic>=1.17.0",
     "dotenv>=0.9.9",
     "fastapi>=0.119.0",
+    "passlib[bcrypt]>=1.7.4",
+    "pydantic-settings>=2.11.0",
     "pydantic[email]>=2.12.1",
+    "python-dotenv>=1.1.1",
+    "python-jose[cryptography]>=3.5.0",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.37.0",
 ]
